# WLAN-CSI

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
include/correlation/: auto_corr.cc  auto_corr.h  autocorr.m  delay_sample.h  moving_avg.h
include/matlab_export/: matlab_export.cc  matlab_export.h
include/multi_rx/: multi_rx.h
include/multisync/: README.md  multisync.h
include/power_trigger/: power_trigger.cc  power_trigger.cpp  power_trigger.h
include/signal_generator/: signal_generator.cc  signal_generator.h
include/zmq_socket/: README.md  zmq_socket.cc  zmq_socket.h
matlab/: AutoCorr.m  example_auto_correlation.m  example_auto_correlation_triangle.m  example_music.m  example_ofdm_multisync.m  example_ofdmframesync.m  example_qdsync.m  example_usrp.m
matlab/example_usrp_music/: cbdata.m  cfr.m
matlab/examples/: example_ofdmframesync.m
matlab/music_125MHz_M256/music_125MHz_M256_1m_-30deg/: cfr.m
matlab/music_125MHz_M256/music_125MHz_M256_1m_-45deg/: cbdata.m
matlab/music_125MHz_M256/music_125MHz_M256_1m_0deg/: cfr.m
matlab/music_125MHz_M256/music_125MHz_M256_1m_30deg/: cbdata.m
matlab/music_125MHz_M256/music_125MHz_M256_1m_60deg/: cbdata.m
matlab/music_125MHz_M256_1m_-30deg/: cbdata.m  cfr.m
matlab/music_125MHz_M256_1m_-45deg/: cbdata.m  cfr.m
matlab/music_125MHz_M256_1m_-60deg/: cbdata.m  cfr.m
matlab/music_125MHz_M256_1m_0deg/: cbdata.m  cfr.m
matlab/music_125MHz_M256_1m_30deg/: cbdata.m  cfr.m
matlab/music_125MHz_M256_1m_45deg/: cbdata.m  cfr.m
matlab/music_125MHz_M256_1m_60deg/: cbdata.m  cfr.m
matlab/music_125MHz_M64/music_125MHz_M64_1m_-30deg/: cbdata.m
matlab/music_125MHz_M64/music_125MHz_M64_1m_-45deg/: cfr.m
matlab/music_125MHz_M64/music_125MHz_M64_1m_-60deg/: cfr.m
matlab/music_125MHz_M64/music_125MHz_M64_1m_0deg/: cfr.m
matlab/music_125MHz_M64_1m_-30deg/: cbdata.m  cfr.m
matlab/music_125MHz_M64_1m_-45deg/: cbdata.m  cfr.m
matlab/music_125MHz_M64_1m_-60deg/: cbdata.m  cfr.m
matlab/music_125MHz_M64_1m_0deg/: cbdata.m  cfr.m
matlab/music_125MHz_M64_1m_30deg/: cbdata.m  cfr.m
matlab/music_125MHz_M64_1m_60deg/: cbdata.m  cfr.m
matlab/usrp_music_125MHz_M256_1m_0deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m/music_125MHz_M256_1m_-45deg/: cfr.m
measurements/music_125MHz_M256_1m/music_125MHz_M256_1m_0deg/: cfr.m
measurements/music_125MHz_M256_1m/music_125MHz_M256_1m_10deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m/music_125MHz_M256_1m_20deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m/music_125MHz_M256_1m_40deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m/music_125MHz_M256_1m_50deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m/music_125MHz_M256_1m_55deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m/music_125MHz_M256_1m_60deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m_-30deg/: cfr.m
measurements/music_125MHz_M256_1m_-45deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m_-60deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m_0deg/: cfr.m
measurements/music_125MHz_M256_1m_30deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m_45deg/: cbdata.m  cfr.m
measurements/music_125MHz_M256_1m_60deg/: cfr.m
measurements/music_125MHz_M64_1m/music_125MHz_M64_1m_0deg/: cbdata.m  cfr.m
measurements/music_125MHz_M64_1m/music_125MHz_M64_1m_10deg/: cbdata.m  cfr.m
music/: music-spectrum.py  requirements.txt  setup.py  zmq_socket.py
patch/: liquid.patch
sandbox/: example_auto_correlation.cc  example_music.cc  example_ofdm_multisync.cc  example_ofdmframesync.cc  example_qdsync.cc  example_symsync_get_tau.cc  example_usrp.cc  example_usrp_music.cc
simulations/sim_multichannel/: README.md  sim_multichannel.cc  sim_multichannel.m
simulations/sim_music/: sim_music.cc  sim_music.m
simulations/sim_singlechannel/: README.md  sim_singlechannel.cc
src/: main.cc
tests/: correlation_test.cc  power_trigger_test.cc
